plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

javafx {
	version = '17.0.6'
	modules = ['javafx.controls', 'javafx.fxml']
}

//application {
//	mainClass = 'com.example.Application'
//	applicationDefaultJvmArgs = ['--module-path', classpath.asPath, '--add-modules', 'javafx.controls,javafx.fxml']
//}


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// javaFXのView構成に必要なライブラリを導入する
	implementation 'org.openjfx:javafx-controls:17.0.6'
	implementation 'org.openjfx:javafx-fxml:17.0.6'

	implementation 'org.openjfx:javafx-base:17.0.6'
	implementation 'org.openjfx:javafx-graphics:17.0.6'

}

tasks.named('test') {
	useJUnitPlatform()
}
